--- a/LaTeX6.tex
+++ b/LaTeX6.tex
@@ -1,28 +1,22 @@
-﻿\documentclass[a4paper,12pt]{article}
+\documentclass[a4paper,12pt]{article}
 \usepackage[MeX]{polski}
-\usepackage[utf8]{inputenc}
+\usepackage[utf8]{inputenc)
 
-%opening
+\begin {document}
 \title{Cwiczenia z LaTeX mat}
 \author{Szczygielski}
 \date {24-10-2017}
-\begin {document}
 \maketitle
-\begin {abstract} {Krótke streszczenie}
+\begin {abstract} {Krotke streszczenie}
 \end {abstract}
-$c^{2}=a^{2}+b^{2}$
-
-
+$c^{2}=a^{2}+b^{2}$\\
 $$lim_{n \to \infty}
 \sum_{k=1}^n \frac{1}{k^2}
-= \frac{\pi^2}{6}$$
-
-$${\Pi}_{i=2}^{n=i^2} =\frac{lim^{n \to {4}}(1+\frac{1}{n})^n}{\sum k\frac{1}{n}}$$
-
+= \frac{\pi^2}{6}$$\\
+$$\prod_{i=2}^{n=i^2} =\frac{lim^{n \to {4}}(1+\frac{1}{n})^n}{\sum k\frac{1}{n}}$$\\
 \begin {eqnarray}
 \int_{2}^{\infty} \frac{1}{log_{2}x}dx=\frac{1}{x}\sin x=1 - \cos^2(x)
 \end {eqnarray}
-
 $$\left[ \begin{array}{cccc}
 a_{11} & a_{12} & \ldots & a_{1K}\\
 a_{21} & a_{22} & \ldots & a_{2K}\\
@@ -39,5 +33,5 @@ b_{2}\\
 \vdots\\
 b_{K}
 \end {array} \right]
-
+$$
 \end{document}
