--- a/Latex1.tex
+++ b/Latex1.tex
@@ -180,7 +180,7 @@ nastawionej na komunikację VoIP.
 \item Układy do badania zjawisk fizycznych, np. efekt Comptona, efekt Kerra, efekt termoelektryczny, badania
 energii promieniowania (alfa), badania pompowania optycznego, promieniowania X, eksperymentu
 Sterna-Gerlacha, pomiaru prędkości światła i wielu innych.
-\item Zestaw inteligentnych robotów humanoidalnych oraz zestaw uniwersalnych robotów programowalnych.
+\item Zestaw inteligentnych robotów humanoidalnych oraz zestaw uniwersalnych robotów programowalnych
 \end {itemize}
 
 
