--- a/LaTeX2.tex
+++ b/LaTeX2.tex
@@ -4,7 +4,7 @@
 
 \begin {document}
 \title{Cwiczenia z LaTeX mat}
-\author{Szczygielski}
+\author{Szczygielski.}
 \date {24-10-2017}
 \maketitle
 \begin {abstract} {Krotke streszczenie}
