--- a/Latex3.tex
+++ b/Latex3.tex
@@ -18,7 +18,7 @@
 \label{pocz}
 ,,W 1999 r. Nutahara zadebiutował w Rajdowych Mistrzostwach Świata. Pilotowany przez Noriyukiego Odagiri i jadący Mitsubishi Lancerem Evo 5 nie ukończył wówczas Rajdzie Nowej Zelandii z powodu awarii.''
 \section{Osiągnięcia}
-\label{osio}
+\label{osi}
 ,,W 2004 r. zaliczył cykl startów w serii Production Cars WRC. Zajął w niej 9. miejsce, a w 2005 r. --- był w niej 4. (zajął 2. miejsce w PCWRC w Rajdzie Japonii). W 2006 r. wywalczył wicemistrzostwo Production Cars. Zdobył 35 punktów, o 5 mniej niż zwycięzca, Katarczyk Nasir al-Atijja. Japończyk wygrał w PCWRC Rajd Monte Carlo, Rajd Japonii i Rajd Cypru.W latach 2007–2008 zajmował 7. pozycję w Production Cars.''
 \section {Debiut}
 \label{deb}
