--- a/LaTeX4.tex
+++ b/LaTeX4.tex
@@ -58,7 +58,7 @@ W 1886 nomenklatura Plewki częścią folwarku Szepietowo. Pod koniec wieku XIX 
 \section {Zabytki}
 \begin {frame}{Zabytki}
 \begin{itemize}
-\item Krzyż przydrożny z roku 1904
+\item Krzyż przydrożny z roku 1904 \cite{deni}
 \end{itemize}
 \end{frame}
 \section {Dojazd}
@@ -77,5 +77,12 @@ W 1886 nomenklatura Plewki częścią folwarku Szepietowo. Pod koniec wieku XIX 
 \end{figure}
 \end{center}
 \end {frame}
+\section {Bibliografia}
+\begin{frame}{Bibliografia}
+\begin{thebibliography}{99}
+\bibitem {deni}  Załącznik Nr 1 do uchwały Nr III/13/06 Rady Gminy Szepietowo z dnia 28 grudnia 2006 r.
+\end {thebibliography}
+\end{frame}
+
 
 \end{document}
